--- a/.github/workflows/code-coverage_windows.yml
+++ b/.github/workflows/code-coverage_windows.yml
@@ -204,29 +204,29 @@ jobs:
     #     kill $pid
     #     sleep 5
     
-    # - name: ADLS Coverage with profilers
-    #   shell: bash
-    #   run: |-
-    #     rm -rf ${{ env.MOUNT_DIR }}/*
-    #     rm -rf ${{ env.TEMP_DIR }}/*
-    #     cp ${{ env.cloudfuse_ADLS_CFG }} /tmp/configAdlsProfilerTemp.yaml
-    #     echo "dynamic-profile: true" >> /tmp/configAdlsProfilerTemp.yaml
-    #     echo "cpu-profile: /tmp/cpuAdlsProfTmp" >> /tmp/configAdlsProfilerTemp.yaml
-    #     echo "mem-profile: /tmp/memAdlsProfTmp" >> /tmp/configAdlsProfilerTemp.yaml
-    #     echo "health_monitor:" >> /tmp/configAdlsProfilerTemp.yaml
-    #     echo "  enable-monitoring: true" >> /tmp/configAdlsProfilerTemp.yaml
-    #     echo "  monitor-disable-list:" >> /tmp/configAdlsProfilerTemp.yaml
-    #     echo "    - cloudfuse_stats" >> /tmp/configAdlsProfilerTemp.yaml
-    #     cat /tmp/configAdlsProfilerTemp.yaml
-    #     ./cloudfuse.test -test.v -test.coverprofile=${{ env.WORK_DIR }}/cloudfuse_adls_profiler.cov mount ${{ env.MOUNT_DIR }} --config-file=/tmp/configAdlsProfilerTemp.yaml &
-    #     sleep 10
-    #     pid=`ps -a | grep cloudfuse | tr -s ' ' | cut -d ' ' -f2`
-    #     rm -rf ${{ env.MOUNT_DIR }}/*
-    #     cd test/e2e_tests
-    #     go test -v -timeout=7200s ./... -args -mnt-path=${{ env.MOUNT_DIR }} -tmp-path=${{ env.TEMP_DIR }} -quick-test=true -stream-direct-test=true
-    #     cd -
-    #     kill $pid
-    #     sleep 5
+    - name: ADLS Coverage with profilers
+      shell: bash
+      run: |-
+        rm -rf ${{ env.MOUNT_DIR }}/*
+        rm -rf ${{ env.TEMP_DIR }}/*
+        cp ${{ env.cloudfuse_ADLS_CFG }} /tmp/configAdlsProfilerTemp.yaml
+        echo "dynamic-profile: true" >> /tmp/configAdlsProfilerTemp.yaml
+        echo "cpu-profile: /tmp/cpuAdlsProfTmp" >> /tmp/configAdlsProfilerTemp.yaml
+        echo "mem-profile: /tmp/memAdlsProfTmp" >> /tmp/configAdlsProfilerTemp.yaml
+        echo "health_monitor:" >> /tmp/configAdlsProfilerTemp.yaml
+        echo "  enable-monitoring: true" >> /tmp/configAdlsProfilerTemp.yaml
+        echo "  monitor-disable-list:" >> /tmp/configAdlsProfilerTemp.yaml
+        echo "    - cloudfuse_stats" >> /tmp/configAdlsProfilerTemp.yaml
+        cat /tmp/configAdlsProfilerTemp.yaml
+        ./cloudfuse.test -test.v -test.coverprofile=${{ env.WORK_DIR }}/cloudfuse_adls_profiler.cov mount ${{ env.MOUNT_DIR }} --config-file=/tmp/configAdlsProfilerTemp.yaml &
+        sleep 10
+        pid=`ps -a | grep cloudfuse | tr -s ' ' | cut -d ' ' -f2`
+        rm -rf ${{ env.MOUNT_DIR }}/*
+        cd test/e2e_tests
+        go test -v -timeout=7200s ./... -args -mnt-path=${{ env.MOUNT_DIR }} -tmp-path=${{ env.TEMP_DIR }} -quick-test=true -stream-direct-test=true
+        cd -
+        kill $pid
+        sleep 5
     
     # - name: Create Config File - S3
     #   shell: bash
@@ -496,8 +496,6 @@ jobs:
       shell: bash {0}
       run: |-
         set +x
-        ./cloudfuse.test unmount all
-        sudo kill -9 `pidof cloudfuse.test`
         rm -rf ${{ env.MOUNT_DIR }}/*
         rm -rf ${{ env.TEMP_DIR }}/*
         sudo ln -s `pwd`/cfusemon /usr/local/bin/cfusemon
@@ -516,7 +514,6 @@ jobs:
       shell: bash {0}
       run: |-
         set +x
-        sudo kill -9 `pidof cloudfuse.test`
         rm -rf ${{ env.MOUNT_DIR }}/*
         rm -rf ${{ env.TEMP_DIR }}/*
         cat /tmp/configAdlsProfilerTemp.yaml
@@ -525,7 +522,9 @@ jobs:
         pid=`ps -a | grep cloudfuse | tr -s ' ' | cut -d ' ' -f2`
         pid_mon=`ps -a | grep cfusemon | tr -s ' ' | cut -d ' ' -f2`
         ./cloudfuse.test -test.v -test.coverprofile=${{ env.WORK_DIR }}/cfusemon_stop_all.cov health-monitor stop all
-        ./cloudfuse.test unmount all
+        kill $pid
+        kill $pid_mon
+        sleep 5
     
     - name: Save coverage report
       run: |
