--- a/cloudfuse-release.yaml
+++ b/cloudfuse-release.yaml
@@ -207,7 +207,7 @@ stages:
               mkdir -p pkgDir/usr/bin/
               mkdir -p pkgDir/usr/share/cloudfuse/
               cp azure-storage-fuse/cloudfuse pkgDir/usr/bin/cloudfuse
-              cp azure-storage-fuse/bfusemon pkgDir/usr/bin/bfusemon
+              cp azure-storage-fuse/cfusemon pkgDir/usr/bin/cfusemon
               cp azure-storage-fuse/setup/baseConfig.yaml pkgDir/usr/share/cloudfuse/
               cp azure-storage-fuse/sampleFileCacheConfig.yaml pkgDir/usr/share/cloudfuse/
               cp azure-storage-fuse/sampleStreamingConfig.yaml pkgDir/usr/share/cloudfuse/
