--- a/sampleFileCacheConfigAzure.yaml
+++ b/sampleFileCacheConfigAzure.yaml
@@ -1,10 +1,8 @@
 # Refer ./setup/baseConfig.yaml for full set of config parameters
 
-allow-other: true
-
 logging:
   type: syslog
-  level: log_debug
+  level: log_warning
 
 components:
   - libfuse
@@ -28,8 +26,8 @@ attr_cache:
 azstorage:
   type: block
   account-name: mystorageaccount
-  sas: ?sv=<SAS_TOKEN>
+  account-key: mystoragekey
   endpoint: https://mystorageaccount.blob.core.windows.net
-  mode: sas
+  mode: key
   container: mycontainer
  
